<resources>
    <string name="app_name">Ensan 7ayawan Shay2</string>
    <string name="app_name_no_spaces">Ensan7ayawanShay2</string>
    <string name="google_web_client_id">621729333388-v84l9tebd4m3987u2llq8ehdjs0hahk6.apps.googleusercontent.com</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="sign_in_error">Sign in error</string>
    <string name="try_again">Try again</string>
    <string name="start">Start</string>
    <string name="create_room">Create room</string>
    <string name="join_room">Join room</string>
    <string name="invite">Invite</string>
    <string name="to_a_new_room">to a new room?</string>
    <string name="new_game_invitation">New game invitation</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="invited_you_to_a_game">invited you to a game</string>
    <string name="invitation_sent_successfully">Invitation sent successfully</string>
    <string name="could_not_send_invitation">Could not send invitation</string>
    <string name="rooms">Rooms</string>
    <string name="added_you_to_a_room">added you to a room</string>
    <string name="created_a_room">created a room</string>
    <string name="you">You</string>
    <string name="game_room">Game Room</string>
    <string name="letter">Letter:</string>
    <string name="press_start_button">Press START button</string>
    <string name="your_score">Your score:</string>
    <string name="ensan">Ensan</string>
    <string name="_7ayawan">7ayawan</string>
    <string name="shay2">Shay2</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="stopped">, STOPPED</string>
    <string name="games_invitations_notification_channel_id">GamesInvitations</string>
    <string name="banner_test_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_start_ad_id">ca-app-pub-1121455192733194/6789934127</string>
    <string name="banner_users_ad_id">ca-app-pub-1121455192733194/9592787908</string>
    <string name="banner_rooms_ad_id">ca-app-pub-1121455192733194/2285143526</string>
    <string name="interstitial_test_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_game_room_ad_id">ca-app-pub-1121455192733194/1327285077</string>
    <string name="you_cannot_use_the_app_right_now">You cannot use the app right now</string>
    <string name="feedback">Feedback</string>
</resources>