<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.GameRoomActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/game_room_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_room_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/letter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/game_room_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/press_start_button"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/your_score"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/game_room_your_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="0"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <Space
                android:id="@+id/space"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_room_players_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:overScrollMode="never"
                app:layout_constraintBottom_toTopOf="@+id/game_room_ensan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/space"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/game_room_ensan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:enabled="false"
                android:hint="@string/ensan"
                app:layout_constraintBottom_toTopOf="@+id/game_room_ensan_entries"
                app:layout_constraintEnd_toStartOf="@+id/game_room_ensan_points_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_goneMarginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/game_room_ensan_points_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="@+id/game_room_ensan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/game_room_ensan">

                <TextView
                    android:id="@+id/game_room_ensan_points_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/game_room_score_background"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/game_room_ensan_points_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/game_room_score_background"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/game_room_ensan_points_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/game_room_score_background"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/white" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_room_ensan_entries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/game_room_7ayawan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/game_room_7ayawan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:enabled="false"
                android:hint="@string/_7ayawan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/game_room_7ayawan_points_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/game_room_7ayawan_points_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="@+id/game_room_7ayawan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/game_room_7ayawan">

                <TextView
                    android:id="@+id/game_room_7ayawan_points_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/game_room_score_background"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/game_room_7ayawan_points_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/game_room_score_background"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/game_room_7ayawan_points_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/game_room_score_background"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/white" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_room_7ayawan_entries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_room_7ayawan" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/game_room_shay2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:enabled="false"
                android:hint="@string/shay2"
                app:layout_constraintEnd_toStartOf="@+id/game_room_shay2_points_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_room_7ayawan_entries"
                app:layout_goneMarginTop="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/game_room_shay2_points_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="@+id/game_room_shay2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/game_room_shay2">

                <TextView
                    android:id="@+id/game_room_shay2_points_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/game_room_score_background"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/game_room_shay2_points_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/game_room_score_background"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/game_room_shay2_points_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/game_room_score_background"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/white" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_room_shay2_entries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_room_shay2" />

            <Button
                android:id="@+id/game_room_start_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/start"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_room_shay2_entries"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/game_room_stop_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/stop"
                android:textAllCaps="false"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_room_shay2_entries"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>